added launcher icon

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
    <application
-        android:label="speedtest"
+        android:label="Speed Test"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
